e2e/tests/all/snapshots/autocomplete_open_desktop.snap
---
source: e2e/src/suite.rs
description: autocomplete at desktop (open)
expression: tree
---
LabelText
  StaticText "City"
combobox "City" [autocomplete=list] [expanded] [haspopup=listbox]
status [atomic] [live=polite]
listbox "City" [orientation=vertical]
  option "Amsterdam" [selected]
    StaticText "Amsterdam"
  option "Berlin" [selected=false]
    StaticText "Berlin"
  option "Copenhagen" [selected=false]
    StaticText "Copenhagen"
  option "Dublin" [selected=false]
    StaticText "Dublin"
  option "Edinburgh" [selected=false]
    StaticText "Edinburgh"
  option "Florence" [selected=false]
    StaticText "Florence"
--> aria-controls [id="lsx-N-listbox"] (rendered above)
