e2e/tests/all/snapshots/autocomplete_open_mobile.snap
---
source: e2e/src/suite.rs
description: autocomplete at mobile (open)
expression: tree
---
LabelText
  StaticText "City"
generic
  combobox "City" [expanded] [haspopup=listbox]
    generic
status [atomic] [live=polite]
generic
  generic
    listbox
      option "Amsterdam" [selected]
        StaticText "Amsterdam"
      option "Berlin" [selected=false]
        StaticText "Berlin"
      option "Copenhagen" [selected=false]
        StaticText "Copenhagen"
      option "Dublin" [selected=false]
        StaticText "Dublin"
      option "Edinburgh" [selected=false]
        StaticText "Edinburgh"
      option "Florence" [selected=false]
        StaticText "Florence"
--> aria-controls [id="lsx-N-listbox"] (rendered above)
