e2e/tests/all/snapshots/autocomplete_rest_desktop.snap
---
source: e2e/src/suite.rs
description: autocomplete at desktop (rest)
expression: tree
---
LabelText
  StaticText "City"
generic
  combobox "City" [expanded=false] [haspopup=listbox]
    generic
status [atomic] [live=polite]
--> aria-controls [id="lsx-N-listbox"] (missing)
