e2e/tests/all/snapshots/autocomplete_rest_mobile.snap
---
source: e2e/src/suite.rs
description: autocomplete at mobile (rest)
expression: tree
---
LabelText
  StaticText "City"
generic
  combobox "City" [expanded=false] [haspopup=listbox]
    generic
status [atomic] [live=polite]
--> aria-controls [id="lsx-N-listbox"] (missing)
