e2e/tests/all/snapshots/avatar_rest_desktop.snap
---
source: e2e/src/suite.rs
description: avatar at desktop (rest)
expression: tree
---
image "Ada Lovelace"
  StaticText "AL"
image "Ada Lovelace"
  StaticText "AL"
image "Ada Lovelace"
  StaticText "AL"
image "Ada Lovelace"
  StaticText "AL"
image "Ada Lovelace"
  StaticText "AL"
image "Ada Lovelace"
  StaticText "AL"
image "Ada Lovelace"
  StaticText "AL"
image "Ada Lovelace"
  StaticText "AL"
image "Ada Lovelace"
  StaticText "AL"
image "Ada Lovelace"
  StaticText "AL"
image "Ada Lovelace"
  StaticText "AL"
image "Ada Lovelace"
  StaticText "AL"
image "Ada Lovelace"
  StaticText "AL"
image "Ada Lovelace"
  StaticText "AL"
image "Ada Lovelace"
  StaticText "AL"
image "Grace Hopper"
  StaticText "GH"
StaticText "Linus"
image "Ada Lovelace"
image "Grace Hopper"
image "2 more: Radia Perlman, Barbara Liskov"
  StaticText "+2"
tooltip "Radia Perlman, Barbara Liskov"
  StaticText "Radia Perlman, Barbara Liskov"
