e2e/tests/all/snapshots/badge_rest_desktop.snap
---
source: e2e/src/suite.rs
description: badge at desktop (rest)
expression: tree
---
StaticText "PRIMARY"
StaticText "SECONDARY"
StaticText "ERROR"
StaticText "INFO"
StaticText "SUCCESS"
StaticText "WARNING"
StaticText "PRIMARY"
StaticText "SECONDARY"
StaticText "ERROR"
StaticText "INFO"
StaticText "SUCCESS"
StaticText "WARNING"
StaticText "PRIMARY"
StaticText "SECONDARY"
StaticText "ERROR"
StaticText "INFO"
StaticText "SUCCESS"
StaticText "WARNING"
StaticText "PRIMARY"
StaticText "SECONDARY"
StaticText "ERROR"
StaticText "INFO"
StaticText "SUCCESS"
StaticText "WARNING"
StaticText "PRIMARY"
StaticText "SECONDARY"
StaticText "ERROR"
StaticText "INFO"
StaticText "SUCCESS"
StaticText "WARNING"
StaticText "XS"
StaticText "SM"
StaticText "MD"
StaticText "LG"
StaticText "XL"
StaticText "XXL"
StaticText "9"
StaticText "LIGHT"
StaticText "DARK"
image "Ada Lovelace"
  StaticText "AL"
image "Grace Hopper"
  StaticText "GH"
StaticText "Ctrl"
StaticText "Ctrl"
StaticText "Ctrl"
StaticText "Ctrl"
StaticText "Ctrl"
StaticText "Ctrl"
list
  listitem [level=1]
    StaticText "First"
  listitem [level=1]
    StaticText "Second"
    list
      listitem [level=2]
        StaticText "Nested"
list
  listitem [level=1]
    ListMarker "1."
    StaticText "Install"
  listitem [level=1]
    ListMarker "2."
    StaticText "Configure"
list
  listitem [level=1]
    StaticText "Keyboard"
  listitem [level=1]
    StaticText "Screen reader"
list
  listitem [level=1]
    StaticText "Install"
  listitem [level=1]
    StaticText "Configure"
list
  listitem [level=1]
    StaticText "Own icon"
  listitem [level=1]
    ListMarker "1."
    StaticText "Numbered"
