e2e/tests/all/snapshots/bottom_navigation-fixed_rest_mobile.snap
---
source: e2e/src/suite.rs
description: bottom_navigation-fixed at mobile (rest)
expression: tree
---
link "Link 0"
  StaticText "Link 0"
link "Link 1"
  StaticText "Link 1"
link "Link 2"
  StaticText "Link 2"
link "Link 3"
  StaticText "Link 3"
link "Link 4"
  StaticText "Link 4"
link "Link 5"
  StaticText "Link 5"
link "Link 6"
  StaticText "Link 6"
link "Link 7"
  StaticText "Link 7"
link "Link 8"
  StaticText "Link 8"
link "Link 9"
  StaticText "Link 9"
link "Link 10"
  StaticText "Link 10"
link "Link 11"
  StaticText "Link 11"
link "Link 12"
  StaticText "Link 12"
link "Link 13"
  StaticText "Link 13"
link "Link 14"
  StaticText "Link 14"
link "Link 15"
  StaticText "Link 15"
link "Link 16"
  StaticText "Link 16"
link "Link 17"
  StaticText "Link 17"
link "Link 18"
  StaticText "Link 18"
link "Link 19"
  StaticText "Link 19"
link "Link 20"
  StaticText "Link 20"
link "Link 21"
  StaticText "Link 21"
link "Link 22"
  StaticText "Link 22"
link "Link 23"
  StaticText "Link 23"
link "Link 24"
  StaticText "Link 24"
link "Link 25"
  StaticText "Link 25"
link "Link 26"
  StaticText "Link 26"
link "Link 27"
  StaticText "Link 27"
link "Link 28"
  StaticText "Link 28"
link "Link 29"
  StaticText "Link 29"
StaticText "Page"
navigation "Main"
  button "Home" [current=page]
    StaticText "Home"
  button "Search"
    StaticText "Search"
  button "Inbox"
    StaticText "Inbox"
