e2e/tests/all/snapshots/bottom_navigation-scroller_rest_mobile.snap
---
source: e2e/src/suite.rs
description: bottom_navigation-scroller at mobile (rest)
expression: tree
---
link "Row 0"
  StaticText "Row 0"
link "Row 1"
  StaticText "Row 1"
link "Row 2"
  StaticText "Row 2"
link "Row 3"
  StaticText "Row 3"
link "Row 4"
  StaticText "Row 4"
link "Row 5"
  StaticText "Row 5"
link "Row 6"
  StaticText "Row 6"
link "Row 7"
  StaticText "Row 7"
link "Row 8"
  StaticText "Row 8"
link "Row 9"
  StaticText "Row 9"
link "Row 10"
  StaticText "Row 10"
link "Row 11"
  StaticText "Row 11"
link "Row 12"
  StaticText "Row 12"
link "Row 13"
  StaticText "Row 13"
link "Row 14"
  StaticText "Row 14"
link "Row 15"
  StaticText "Row 15"
link "Row 16"
  StaticText "Row 16"
link "Row 17"
  StaticText "Row 17"
link "Row 18"
  StaticText "Row 18"
link "Row 19"
  StaticText "Row 19"
navigation "Main"
  button "Home" [current=page]
    StaticText "Home"
  button "Search"
    StaticText "Search"
  button "Inbox"
    StaticText "Inbox"
